Fix small multiples positioning on mobile

--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -313,7 +313,7 @@ a:active{
   color: tint($base-color, 44%);
   @extend .clearfix;
   .chart-group & {
-    margin: 0 -0.5rem;
+    margin: -0.5rem;
   }
   p {
     margin-bottom: 1.5rem;
@@ -349,19 +349,20 @@ a:active{
 }
 
 .chart-item {
-  max-width: 64rem;
   float: left;
   width: 100%;
   padding: 0.5rem;
-  .chart-group-2 & {
-    width: calc(100% / 2);
-  }
-  .chart-group-3 & {
-    min-width: 16rem;
-    width: calc(100% / 3);
-  }
-  .chart-group-4 & {
-    width: calc(100% / 4);
+  @include media(small-up) {
+    .chart-group-2 & {
+      width: calc(100% / 2);
+    }
+    .chart-group-3 & {
+      min-width: 16rem;
+      width: calc(100% / 3);
+    }
+    .chart-group-4 & {
+      width: calc(100% / 4);
+    }
   }
 }
 
